# lab1

./: README.md  lab1.cabal  stack.yaml
src/: Lab1.hs
test/: Spec.hs
