name:                lab1
version:             1.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fpclass/lab1#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           2018 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lab1
  build-depends:
    base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite lab1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base,
    hspec,
    QuickCheck,
    lab1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpclass/lab1
